Bug 453692 - Window drag from style doesn't work with QtWebEngine
Summary: Window drag from style doesn't work with QtWebEngine
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: QStyle (other bugs)
Version First Reported In: 5.23.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-05-12 10:18 UTC by Allan Sandfeld
Modified: 2022-09-09 13:36 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Allan Sandfeld 2022-05-12 10:18:12 UTC
SUMMARY
If you click inside a QWebEngineView you can no longer drag the window from unused parts of the menu or toolbar

ADDITIONAL INFORMATION
This bug appears to have been introduced in 2021 with the commit 
614a780d45fc600735c1893e3a0aa2a633cd31e1 "Start the window drag from the QStyle"

In particular a logic bug means that _eventInQQuickWidget is never set to false (it is set to false after an if statement that exits), see kstyle/breezewindowmanager.cpp:340-350
Comment 1 Nate Graham 2022-09-08 18:22:51 UTC
Marco, could you take a look?
Comment 2 Bug Janitor Service 2022-09-09 09:03:36 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/breeze/-/merge_requests/242
Comment 3 Marco Martin 2022-09-09 13:17:26 UTC
Git commit a9e6a862ae69dea3de26a47878c7402095b6d511 by Marco Martin.
Committed on 09/09/2022 at 09:02.
Pushed by ngraham into branch 'master'.

make sure _eventInQQuickWidget is false when needed

_eventInQQuickWidget can stay hanged breaking drags from empty areas

M  +2    -0    kstyle/breezewindowmanager.cpp

https://invent.kde.org/plasma/breeze/commit/a9e6a862ae69dea3de26a47878c7402095b6d511