make sure _eventInQQuickWidget is false when needed

_eventInQQuickWidget can stay hanged breaking drags from empty areas
BUG:453692